---
source: src/parser.rs
expression: "parse(\"(lambda (x) (cons x 42))\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: Lambda(
                    [
                        "x",
                    ],
                    Expr {
                        kind: Cons(
                            Expr {
                                kind: Var(
                                    "x",
                                ),
                            },
                            Expr {
                                kind: Nat(
                                    BigUint {
                                        data: [
                                            42,
                                        ],
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
